# qtclientsingularity

./: .gitignore  README.md  qtclient.def
qtclient/: .gitignore  CMakeLists.txt  auto_build_linux.sh  auto_build_windows.bat  auto_package_windows.bat  qtclient.qrc  readme.txt
qtclient/cmake/: QtCommon.cmake
qtclient/src/: httpbody.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
